# shard

./: .gitignore  CMakeLists.txt  MaterializeInDestShardingModel.cpp  NSPPasses.cpp  NSPPasses.h  NSPSPmdize.cpp  NSPShardInterfaceModels.cpp  NSPShardPlanner.cpp  PatternRecognition.cpp
include/hexagon/: CMakeLists.addition.txt
include/hexagon/Conversion/: CMakeLists.txt
include/hexagon/Conversion/ShardToLLVM/: CMakeLists.txt  Passes.h  Passes.td
include/hexagon/NSP/: NSPPasses.h
include/hexagon/NSP/IR/: CMakeLists.txt  NSPBase.td  NSPDialect.h  NSPOps.h  NSPOps.td
lib/Conversion/ShardToLLVM/: CMakeLists.txt  ShardToLLVMPass.cpp
lib/NSP/: CMakeLists.txt  NSPLocalizePass.cpp  NSPMaterializePass.cpp  NSPPasses.cpp  NSPSPmdize.cpp  NSPShardInterfaceModels.cpp  NSPShardPlanner.cpp
lib/NSP/IR/: CMakeLists.txt  NSPDialect.cpp  NSPOps.cpp
